task_2/service_template_my.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: example-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    id: example-app
  type: ClusterIP
status:
  loadBalancer: {}
